🔥 feat: set up styled components and its types

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
   ],
   "rules": {
     "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/no-empty-interface": "off",
     "indent": [
       "error",
       2
