--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,8 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "@typescript-eslint/no-empty-interface": "off",
+    "@typescript-eslint/ban-types": "off",
+    "react/no-unescaped-entities": "warn",
     "indent": [
       "error",
       2
